[package]
name = "blockfrost-http-client"
description = "Minimal Blockfrost Client"
version = "0.0.14"
edition = "2021"
license = "Apache-2.0"
authors = ["Mitchell Turner"]
repository = "https://github.com/MitchTurner/blockfrost-http-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
hex = "0.4.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.11", features = ["json"] }
thiserror = "1.0.24"
toml = "0.5.9"
url = "2.2.2"

[dev-dependencies]
tiny-bip39 = "1.0.0"
cardano-multiplatform-lib = { version = "3.1.1", git = "https://github.com/dcSpark/cardano-multiplatform-lib.git", rev = "685354495562ff879101fd023eb89555db9bbb1e"}
tokio = { version = "1.20.1", features = ["full"] }
